# auditor-with-no-questions

./: .gitignore  .kube-linter.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yaml
apps/argo-events/: application.yaml  eventbus.yaml  kustomization.yaml
apps/argo-events/event-sources/: falco-webhook.yaml
apps/argo-events/sensors/: compliance-response.yaml
apps/argo-workflows/: application.yaml  kustomization.yaml
apps/argo-workflows/templates/: forensic-capture.yaml
apps/demo-app/: application.yaml
apps/falco/: application.yaml  values.yaml
apps/falcosidekick/: application.yaml  values.yaml
apps/kyverno/: application.yaml  kustomization.yaml  values.yaml
apps/kyverno/policies/image-validating/: verify-signatures.yaml
apps/kyverno/policies/legacy/: disallow-privileged.yaml
apps/kyverno/policies/validating/: require-labels.yaml  require-resources.yaml
apps/monitoring/: application.yaml  values.yaml
apps/namespaces/: kustomization.yaml  namespaces.yaml
bootstrap/app-of-apps/: applicationset.yaml  root-app.yaml
bootstrap/argocd/: argocd-cm-patch.yaml  argocd-cmd-params-cm-patch.yaml  kustomization.yaml  namespace.yaml
demo/scenarios/01-shell-access/: scenario.yaml  target-pod.yaml
demo/scenarios/02-drift-detection/: drift-manifest.yaml  scenario.yaml
demo/scenarios/03-crypto-miner/: crypto-sim.yaml  scenario.yaml
demo/scenarios/04-evidence-export/: scenario.yaml
demo/target-app/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
docs/: COMPLIANCE-MAPPING.md  DEMO-RUNBOOK.md  SETUP.md
infrastructure/eksctl/: cluster.yaml
infrastructure/terraform/: .terraform.lock.hcl  eks.tf  iam.tf  outputs.tf  staging.tfvars  variables.tf  versions.tf  vpc.tf
presentation/: architecture.md  speaker-notes.md
scripts/: run-e2e-tests.sh
src/: __init__.py  cli.py  demo.py  evidence.py  setup.py  validate.py
src/utils/: __init__.py  aws.py  formatting.py  kubernetes.py
tests/: __init__.py  conftest.py  test_cli.py  test_evidence.py  test_validate.py
tests/e2e/: __init__.py  conftest.py  kind-config.yaml  test_argocd.py  test_components.py
