# ABOUTME: Python project configuration for sovereign compliance demo CLI
# ABOUTME: Defines dependencies, build system, and CLI entry points

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-compliance-demo"
version = "0.1.0"
description = "Continuous compliance evidence for sovereign Kubernetes using CNCF projects"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Michael Forrester", email = "michael@example.com" }
]
keywords = [
    "kubernetes",
    "compliance",
    "falco",
    "argocd",
    "gitops",
    "security",
    "sovereignty"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "kubernetes>=29.0.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "boto3-stubs[eks]>=1.34.0",
]

e2e = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "kubernetes>=29.0.0",
]

[project.scripts]
sovereign = "src.cli:main"

[project.urls]
Homepage = "https://github.com/peopleforrester/auditor-with-no-questions"
Repository = "https://github.com/peopleforrester/auditor-with-no-questions"
Issues = "https://github.com/peopleforrester/auditor-with-no-questions/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/e2e"

[tool.coverage.run]
source = ["src"]
omit = ["src/demo.py", "src/setup.py"]

[tool.coverage.report]
show_missing = true
fail_under = 30
